bitwarden/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: bitwarden
  name: bitwarden
  labels:
    app: bitwarden
spec:
  selector:
    matchLabels:
      app: bitwarden
  replicas: 1
  template:
    metadata:
      labels:
        app: bitwarden
    spec:
      containers:
      - name: bitwarden
        image: docker.durp.info/vaultwarden/server:1.26.0
        imagePullPolicy: Always
        volumeMounts:
        - name: bitwarden-longhorn-pvc
          mountPath: /data
          subPath: bitwaren-data              
        ports:
        - name: http
          containerPort: 80
      volumes:
      - name: bitwarden-longhorn-pvc
        persistentVolumeClaim:
          claimName: bitwarden-longhorn-pvc
