bitwarden/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitwarden
  annotations:
    external-dns.alpha.kubernetes.io/hostname: bitwarden.durp.info
spec:
  type: ExternalName
  externalName: durp.info
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: bitwarden
