bitwarden/templates/ingress.yaml
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: bitwarden-ingress
#  annotations:
#    kubernetes.io/ingress.class: nginx
#    cert-manager.io/cluster-issuer: letsencrypt-production 
#spec:
#  rules:
#  - host: bitwarden.durp.info
#    http:
#      paths:
#      - path: /
#        pathType: Prefix
#        backend:
#          service:
#            name: bitwarden
#            port: 
#              number: 80         
#  tls:
#    - hosts: 
#      - bitwarden.durp.info
#      secretName: bitwarden-tls

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: bitwarden-ingress
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`bitwarden.durp.info`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: bitwarden
      port: 80
  tls:
    secretName: bitwarden-tls
